--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,6 @@
         <activity android:name=".VideoActivity"
             android:theme="@style/AppTheme.NoTitle"
             android:launchMode="singleTop">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".DetailActivity"
+            android:label="@string/detail"
             android:parentActivityName=".VideoActivity">
             <meta-data android:name="parentActivityName"
                 android:value=".VideoActivity"/>
